style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #d1d4e0;
  font-family: "Poppins", sans-serif;
}

.box-container {
  display: flex;
  justify-content: center;
}

.container {
  background-color: #f7f7f7;
  width: 100%;
  max-width: 1000px;
  min-width: 100px;
  display: grid;
  grid-template-columns: 1fr 2fr;
  margin: 2rem;
  box-shadow: 1px 2px 2px 1px #45434338;
}

.left-side {
  background-color: #1c2733;
  width: 25rem;
}

.profile-img {
  display: flex;
  justify-content: center;
}

.profile-img img {
  width: 15rem;
  border-radius: 50%;
  margin-top: 2rem;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #f7f7f7;
  padding: 5px;
  letter-spacing: 2px;
}

.info p {
  text-transform: uppercase;
  padding: 5px;
  border-bottom: 1px solid #aeaeae;
}

.contact,
.education {
  margin-left: 4rem;
  padding-bottom: 7px;
}

.contact-header,
.edu-header,
.language-header {
  color: #f7f7f7;
  text-align: start;
  text-transform: uppercase;
  margin: 10px;
  letter-spacing: 2px;
}

.contact-detail {
  color: #3990b2;
  padding: 5px;
}

.contact-detail span {
  margin: 1rem;
  color: #f7f7f7;
  font-weight: 400;
}

.contact-detail span a {
  color: #f7f7f7;
  text-decoration: none;
  font-weight: 400;
}

.edu-header,
.language-header {
  margin-left: 4rem;
  margin-top: 2rem;
  letter-spacing: 2px;
}

.year {
  color: #3990b2;
  padding: 2px;
}

.edu-detail,
.edu-place {
  color: #f7f7f7;
  padding: 2px;
  text-transform: capitalize;
}

.languages p {
  color: #f7f7f7;
  margin-left: 4rem;
}

.languages ul {
  width: 18rem;
  margin-left: 4rem;
  padding-bottom: 1rem;
}

.languages ul li {
  padding-bottom: 1rem;
}

.text {
  color: #f7f7f7;
}

.percentage {
  position: relative;
  width: 100%;
  height: 6px;
  background: #081921;
  display: block;
  margin-top: 5px;
}

.percentage div {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background: #3990b2;
}

.profile-header,
.skills-header,
.project-header {
  color: #1c2733;
  text-transform: uppercase;
  padding: 1rem;
}

.right-side p {
  padding: 1rem;
  padding-top: 0;
  color: #737376;
}

.skills-container ul {
  width: 30rem;
  margin-bottom: 1rem;
}

.skills-container ul li {
  padding: 7px;
  margin-left: 9px;
}

.project-title {
  text-transform: capitalize;
  margin-left: 1rem;
}

@media screen and (max-width: 950px) {
  .container {
    margin: 0;
    grid-template-columns: repeat(1, 1fr);
  }

  .left-side {
    width: 100%;
  }
}

